# awesome-db-optimizer

./: .clangd  .gitignore  .latexmkrc  AGENTS.md  README.md
.agents/skills/reviewing-db-optimizer-demo/: SKILL.md
.agents/skills/reviewing-db-optimizer-demo/agents/: openai.yaml
demos/demo/: AGENT_CONTENT_MANAGEMENT.md  CMakeLists.txt  CMakePresets.json
demos/demo/docs/: dpsub-workflow.html  index.html  mpdp-workflow.html  topdown-partitioning-workflow.html  transformational-search.html
demos/demo/examples/: test_cases.cpp  test_cases.hpp
demos/demo/include/volcano/: bottom_up_dp.hpp  cost_model.hpp  dp_sub.hpp  exporter.hpp  mincut.hpp  mpdp.hpp  search_helpers.hpp  search_strategy.hpp  top_down_partitioning.hpp  transformational.hpp  types.hpp
demos/demo/src/: bottom_up_dp.cpp  cost_model.cpp  dp_sub.cpp  main.cpp  mincut.cpp  mpdp.cpp  top_down_partitioning.cpp  transformational.cpp  types.cpp
demos/demo/tests/: test_join_search.cpp
demos/volcano_join_reorder/: CMakeLists.txt
demos/volcano_join_reorder/examples/: chain.sql  chain_stats.json
demos/volcano_join_reorder/include/volcano/: duckdb_sql_frontend.hpp  exporter.hpp  optimizer.hpp  stats.hpp  transformational.hpp
demos/volcano_join_reorder/src/: cost_model.cpp  duckdb_sql_frontend.cpp  exporter.cpp  main.cpp  optimizer.cpp  stats.cpp
demos/volcano_join_reorder/tests/: test_volcano.cpp
join order/: SWSP79-notes.html  open-source-optimizer-architectures.html  top-down-survey.html
join order/docs/: IKKBZ-notes.html
joinOrder/docs/: heuristic-search-sig2023-notes.html  how-good-are-query-optimizers-pvldb2015-notes.html  mpdp-sigmod2022-notes.html  open-source-optimizer-architectures.html  parallelizing-query-optimization-vldb2008-notes.html  query-simplification-notes.html
joinOrder/proofs/: .latexmkrc  Makefile  README.md  join-order-proof-notes.tex
manual-html-output/: Transformative-vldb1997-manual-manifest.json  Transformative-vldb1997.html
unnset/docs/: nested-sql-unnesting-tutorial.html
